Fix initializing the Elm app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE HTML><html><head><meta charset="UTF-8"><title>Space Adventure</title></head><body><div id="root"></div><script src="./demo.js"></script></body></html>
+<!DOCTYPE HTML><html><head><meta charset="UTF-8"><title>Space Adventure</title></head><body><div id="root"></div><script src="./demo.js"></script><script>Elm.Main.init({node:document.getElementById("root")})</script></body></html>
