Update docs and demo adventure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE HTML><html><head><meta charset="UTF-8"><title>Space Adventure</title></head><body><div id="root"></div><script src="./demo.js"></script><script>Elm.Main.init({node:document.getElementById("root")})</script></body></html>
+<!DOCTYPE html><html><head><title>Spaceship</title><meta name="viewport" content="width=device-width, initial-scale=1"></head><body> <div id="root"></div> <script src="/src.1ccc1064.js"></script> </body></html>
