--- a/example/src/index.html
+++ b/example/src/index.html
@@ -7,18 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./Main.elm"></script>
-    <script>
-      var GAME_KEY = "wolfadex__elm-text-adventure__example__game";
-
-      var app = Elm.Main.init({
-        node: document.getElementById("root"),
-        flags: JSON.parse(localStorage.getItem(GAME_KEY) || "")
-      });
-
-      app.ports.saveGame.subscribe(function(gameData) {
-        localStorage.setItem(GAME_KEY, JSON.stringify(gameData));
-      });
-    </script>
+    <script src="./index.js"></script>
   </body>
 </html>
