--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Spaceship</title><meta name="viewport" content="width=device-width, initial-scale=1"></head><body> <div id="root"></div> <script src="/src.1ccc1064.js"></script> </body></html>
+<!DOCTYPE html><html><head><title>Spaceship</title><meta name="viewport" content="width=device-width, initial-scale=1"></head><body> <div id="root"></div> <script src="./src.1ccc1064.js"></script> </body></html>
